# optionmatrix

./: .gitignore  AUTHORS  ChangeLog  HOWTO  Makefile.am  Makefile.in  NEWS  README  TODO  WEBSITE  aclocal.m4  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  optionmatrix.info  optionmatrix.texi  version.texi
doc/html/: Makefile.in
man/: Makefile.am  Makefile.in  optionmatrix.1  optionmatrix_console.1
src/: Makefile.am  Makefile.in  args.cpp  checks.cpp  cumulative_norm.cpp  curses_calendar.cpp  curses_demo.cpp  curses_display.cpp  curses_include.h  curses_inputs.cpp  curses_main.cpp  curses_misc.cpp  curses_process.cpp  curses_prop.cpp  defaults.cpp  defs.h  distributions.cpp  extern.h  futures.cpp  greeks.cpp  gtk_bonds.cpp  gtk_calendar.cpp  gtk_cashflow.cpp  gtk_checkbutton.cpp  gtk_combobox.cpp  gtk_dialog.cpp  gtk_display.cpp  gtk_extern.h  gtk_glade.h  gtk_include.h  gtk_main.cpp  gtk_main.h  gtk_menu.cpp  gtk_radio.cpp  gtk_scale.cpp  gtk_spin.cpp  gtk_thread.cpp  gtkoptionmatrix.glade  license.h  logger.cpp  (+8 more)
src/financialrecipes/examples/: Makefile.am  Makefile.in  examples_implicit_finite_diff_itpp.cc  examples_implicit_finite_diff_newmat.cc  examples_mean_variance_cxx_itpp.cc  examples_mean_variance_cxx_newmat.cc  run_all_examples.cc
src/financialrecipes/src/: Makefile.in
src/metaoptions/src/: Makefile.am  Makefile.in
src/metaoptions/tests/: Makefile.am  Makefile.in
utils/: push_to_web.sh  tab.sh
